--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-balance-tab.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-balance-tab.html
@@ -3,7 +3,7 @@
     <leave-balance-tab-filters
       absence-periods="leaveBalanceTab.absencePeriods"
       absence-types="leaveBalanceTab.absenceTypes"
-      on-filters-change="leaveBalanceTab.updateReportFilters($filters)">
+      logged-in-contact-id="leaveBalanceTab.loggedInContactId">
     </leave-balance-tab-filters>
 
     <div class="chr_leave-balance-tab__report panel panel-default">
