--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup/details-tab/sickness.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup/details-tab/sickness.html
@@ -7,10 +7,10 @@
         <div class="crm_custom-select crm_custom-select--full">
           <select
             name="reason"
-            ng-disabled="!$ctrl.isRole('admin') &&
-              ($ctrl.isMode('view') || ($ctrl.isRole('manager') && !$ctrl.isLeaveType('sickness')))"
-            ng-options="reason.value as reason.label for reason in $ctrl.sicknessReasons"
-            ng-model="$ctrl.request.sickness_reason">
+            ng-disabled="!detailsTab.isRole('admin') &&
+              (detailsTab.isMode('view') || (detailsTab.isRole('manager') && !detailsTab.isLeaveType('sickness')))"
+            ng-options="reason.value as reason.label for reason in detailsTab.sicknessReasons"
+            ng-model="detailsTab.request.sickness_reason">
             <option value="">- select -</option>
           </select>
           <span class="crm_custom-select__arrow"></span>
@@ -18,13 +18,13 @@
       </div>
     </div>
     <div class="form-group chr_leave-request-modal__required-documents">
-      <div class="col-xs-12" ng-repeat="document in $ctrl.sicknessDocumentTypes">
+      <div class="col-xs-12" ng-repeat="document in detailsTab.sicknessDocumentTypes">
         <input
-          ng-disabled="$ctrl.isRole('staff') || $ctrl.isSelfRecord"
+          ng-disabled="detailsTab.isRole('staff') || detailsTab.isSelfRecord"
           required type="checkbox" value="document.value"
-          ng-click="$ctrl.request.toggleDocument(document.value)"
-          ng-checked="$ctrl.isChecked(document.value)"
-          ng-selected="$ctrl.isDocumentInRequest(document.value)">
+          ng-click="detailsTab.request.toggleDocument(document.value)"
+          ng-checked="detailsTab.isChecked(document.value)"
+          ng-selected="detailsTab.isDocumentInRequest(document.value)">
         <span>{{document.label}}</span>
       </div>
     </div>
