--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/leave-request-popup-body.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-popup/leave-request-popup-body.html
@@ -47,18 +47,18 @@
       <div class="col-xs-12">
         <uib-tabset class="chr_leave-request-modal__tab">
           <uib-tab heading="Details">
-            <leave-request-popup-details-tab
-              request="$ctrl.request" mode="$ctrl.mode" period="$ctrl.period" absence-types="$ctrl.absenceTypes"
+            <leave-request-popup-details-tab ng-if="$ctrl.request"
+              request="$ctrl.request" is-mode="$ctrl.isMode" period="$ctrl.period" absence-types="$ctrl.absenceTypes"
               is-leave-status="$ctrl.isLeaveStatus" selected-absence-type="$ctrl.selectedAbsenceType" balance="$ctrl.balance"
-              absence-periods="$ctrl.absencePeriods" role="$ctrl.role" leave-type="$ctrl.leaveType"
-              check-submit-conditions="$ctrl.checkSubmitConditions" can-manage="$ctrl.canManage">
+              absence-periods="$ctrl.absencePeriods" is-role="$ctrl.isRole" leave-type="$ctrl.leaveType"
+              check-submit-conditions="$ctrl.checkSubmitConditions">
             </leave-request-popup-details-tab>
           </uib-tab>
           <uib-tab heading="Comments">
-            <leave-request-popup-comments-tab request="$ctrl.request" mode="$ctrl.mode" can-manage="$ctrl.canManage"></leave-request-popup-comments-tab>
+            <leave-request-popup-comments-tab ng-if="$ctrl.request" request="$ctrl.request" mode="$ctrl.mode" can-manage="$ctrl.canManage"></leave-request-popup-comments-tab>
           </uib-tab>
           <uib-tab heading="Files">
-            <leave-request-popup-files-tab request="$ctrl.request" file-uploader="$ctrl.fileUploader" mode="$ctrl.mode" can-manage="$ctrl.canManage"></leave-request-popup-files-tab>
+            <leave-request-popup-files-tab ng-if="$ctrl.request" request="$ctrl.request" file-uploader="$ctrl.fileUploader" mode="$ctrl.mode" can-manage="$ctrl.canManage"></leave-request-popup-files-tab>
           </uib-tab>
         </uib-tabset>
       </div>
