PCHR-2478: rename leave balance tab url

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-container.html
@@ -15,7 +15,7 @@
           <a ui-sref="manager-leave.calendar">Calendar</a>
         </li>
         <li ui-sref-active="active">
-          <a ui-sref="manager-leave.balance-report">Leave Balance</a>
+          <a ui-sref="manager-leave.leave-balances">Leave Balance</a>
         </li>
       </ul>
       <div class="tab-content">
