--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/admin-dashboard/components/admin-dashboard-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/admin-dashboard/components/admin-dashboard-container.html
@@ -14,7 +14,7 @@
     <ul class="nav nav-pills nav-stacked nav-pills-stacked-sidebar">
       <li ui-sref-active="active"><a ui-sref="requests">Leave Requests</a></li>
       <li ui-sref-active="active"><a ui-sref="calendar">Calendar</a></li>
-      <li ui-sref-active="active"><a ui-sref="balance-report">Leave Balance</a></li>
+      <li ui-sref-active="active"><a ui-sref="leave-balances">Leave Balance</a></li>
     </ul>
   </div>
   <div class="clear"></div>
