PCHR-2290: Fix calendar legend

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-calendar.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-calendar.scss
@@ -127,6 +127,9 @@ $chr-leave-calendar-legend-size:                  20px;
   }
 }
 
+.chr_leave-calendar__legend__title {
+  font-size: 12px;
+}
 
 .chr_leave-calendar__legend {
 
