--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-legend.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-legend.html
@@ -1,6 +1,6 @@
 <section class="panel panel-default" ng-class="{ 'is-collapsed': legend.legendCollapsed }">
   <header class="panel-heading panel-heading-plain">
-    <h2 class="panel-title" role="button" ng-click="legend.legendCollapsed = !legend.legendCollapsed">
+    <h2 class="panel-title chr_leave-calendar__legend__title" role="button" ng-click="legend.legendCollapsed = !legend.legendCollapsed">
       <i class="fa"
         aria-hidden="true"
         ng-class="{ 'fa-chevron-right': legend.legendCollapsed, ' fa-chevron-down': !legend.legendCollapsed }"></i>
